--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,109 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#D6D6F8"
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/bienvenido"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="40dp"
+        android:text="Bienvenido a Holdy"
+        android:textColor="#23295c"
+        android:textSize="34sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView7" />
+
+    <TextView
+        android:id="@+id/acercaDe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:gravity="center"
+        android:onClick="lanzarAcercaDe"
+        android:text="Acerca de"
+        android:textColor="#3d3da8"
+        android:textSize="16sp"
+        app:drawableLeftCompat="@android:drawable/ic_menu_info_details"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bienvenido" />
+
+    <Button
+        android:id="@+id/iniciarSesion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="72dp"
+        android:backgroundTint="#4446C7"
+        android:text="Iniciar Sesión"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/acercaDe" />
+
+    <Button
+        android:id="@+id/googleBoton"
+        android:layout_width="273dp"
+        android:layout_height="66dp"
+        android:layout_marginTop="32dp"
+        android:backgroundTint="#4446C7"
+        android:paddingLeft="45dp"
+        android:text="Continuar con Google"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/barra" />
+
+    <Button
+        android:id="@+id/registrarse"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:backgroundTint="#a5a6fa"
+        android:text="Registrarse"
+        android:textColor="#23295c"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="@+id/iniciarSesion"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="@+id/iniciarSesion"
+        app:layout_constraintTop_toBottomOf="@+id/iniciarSesion"
+        app:strokeColor="#3d3da8"
+        app:strokeWidth="1sp" />
+
+    <TextView
+        android:id="@+id/barra"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="______________________________________________________"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/registrarse" />
+
+    <ImageView
+        android:id="@+id/googleLogo"
+        android:layout_width="35dp"
+        android:layout_height="29dp"
+        app:layout_constraintBottom_toBottomOf="@+id/googleBoton"
+        app:layout_constraintEnd_toEndOf="@+id/googleBoton"
+        app:layout_constraintHorizontal_bias="0.025"
+        app:layout_constraintStart_toStartOf="@+id/googleBoton"
+        app:layout_constraintTop_toTopOf="@+id/googleBoton"
+        app:layout_constraintVertical_bias="0.459"
+        app:srcCompat="@drawable/googlelogo" />
+
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="319dp"
+        android:layout_height="275dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/holdy1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
