--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,8 @@
         android:layout_height="51dp"
         android:layout_marginTop="100dp"
         android:backgroundTint="#4446C7"
+        android:fontFamily="@font/inter_semibold"
+        android:onClick="irALogin"
         android:text="Iniciar Sesión"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,6 +56,7 @@
         android:layout_height="51dp"
         android:layout_marginTop="32dp"
         android:backgroundTint="#4446C7"
+        android:fontFamily="@font/inter_semibold"
         android:paddingLeft="45dp"
         android:text="Continuar con Google"
         android:textSize="14sp"
@@ -67,6 +70,7 @@
         android:layout_height="51dp"
         android:layout_marginTop="24dp"
         android:backgroundTint="#a5a6fa"
+        android:fontFamily="@font/inter_semibold"
         android:text="Registrarse"
         android:textColor="#23295c"
         android:textSize="14sp"
