--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="hint_usuario_contrana">#993D3DA8</color>
+    <color name="input_fill">#FFFFFFFF</color>
+    <color name="inner_shadow_25">#40000000</color>
+    <color name="texto_paginalogin">#9923295C</color>
+    <color name="azul_23295c">#23295C</color>
+    <color name="colorbuton1">#7774E8</color>
+    <color name="ripple_neutral">#1F000000</color>
+    <color name="google_btn_color">#3D3DA8</color>
 </resources>
