--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -135,8 +135,7 @@
         android:layout_height="46dp"
 
         android:layout_marginTop="48dp"
-        android:background="@drawable/boton"
-        android:backgroundTint="@null"
+        android:backgroundTint="@color/colorbuton1"
         android:elevation="2dp"
         android:fontFamily="@font/inter_semibold"
 
@@ -228,8 +227,7 @@
         android:layout_height="51dp"
 
         android:layout_marginTop="88dp"
-        android:background="@drawable/botton_google"
-        android:backgroundTint="@null"
+        android:backgroundTint="@color/google_btn_color"
 
         android:elevation="2dp"
         android:fontFamily="@font/inter_semibold"
