--- a/app/src/main/res/layout/inicio.xml
+++ b/app/src/main/res/layout/inicio.xml
@@ -207,7 +207,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Pendiente"
+                    android:text="Retirado"
                     android:textColor="#777"
                     android:textSize="14sp" />
             </LinearLayout>
