--- a/app/src/main/res/layout/registrarte.xml
+++ b/app/src/main/res/layout/registrarte.xml
@@ -10,9 +10,7 @@
 
 
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -283,13 +281,12 @@
         android:id="@+id/tvLoginLink"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
         android:background="?attr/selectableItemBackgroundBorderless"
         android:backgroundTint="@android:color/transparent"
         android:fontFamily="@font/inter_regular"
         android:includeFontPadding="false"
         android:minWidth="0dp"
-        android:textAllCaps="false"
-        android:textColor="#23295C"
         android:minHeight="0dp"
         android:paddingLeft="0dp"
         android:paddingTop="0dp"
@@ -297,6 +294,8 @@
         android:paddingBottom="0dp"
         android:stateListAnimator="@null"
         android:text="@string/login_normal"
+        android:textAllCaps="false"
+        android:textColor="#23295C"
         android:textSize="12sp"
         app:layout_constraintBaseline_toBaselineOf="@id/tvTieneCuenta"
         app:layout_constraintStart_toEndOf="@+id/tvTieneCuenta" />
