--- a/app/src/main/res/layout/perfil.xml
+++ b/app/src/main/res/layout/perfil.xml
@@ -237,6 +237,7 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_marginBottom="8dp"
+            android:onClick="irAInicio"
             android:src="@drawable/home_white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
