--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,116 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#D6D6F8"
-    tools:context=".MainActivity">
+    android:fillViewport="true"
+    android:background="#D6D6F8">
 
-    <TextView
-        android:id="@+id/bienvenido"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="76dp"
-        android:text="Bienvenido a Holdy"
-        android:textColor="#23295c"
-        android:textSize="34sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView7" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/main"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/acercaDe"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:gravity="center"
-        android:onClick="lanzarAcercaDe"
-        android:text="Acerca de"
-        android:textColor="#3d3da8"
-        android:textSize="16sp"
-        app:drawableLeftCompat="@android:drawable/ic_menu_info_details"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bienvenido" />
+        <TextView
+            android:id="@+id/bienvenido"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="76dp"
+            android:text="Bienvenido a Holdy"
+            android:textColor="#23295c"
+            android:textSize="34sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView7" />
 
-    <Button
-        android:id="@+id/iniciarSesion"
-        android:layout_width="229dp"
-        android:layout_height="51dp"
-        android:layout_marginTop="100dp"
-        android:backgroundTint="#4446C7"
-        android:fontFamily="@font/inter_semibold"
-        android:onClick="irALogin"
-        android:text="Iniciar Sesión"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/acercaDe" />
+        <TextView
+            android:id="@+id/acercaDe"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="16dp"
+            android:gravity="center"
+            android:onClick="lanzarAcercaDe"
+            android:text="Acerca de"
+            android:textColor="#3d3da8"
+            android:textSize="16sp"
+            app:drawableLeftCompat="@android:drawable/ic_menu_info_details"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/bienvenido" />
 
-    <Button
-        android:id="@+id/googleBoton"
-        android:layout_width="0dp"
-        android:layout_height="51dp"
-        android:layout_marginTop="32dp"
-        android:backgroundTint="@color/google_btn_color"
-        android:fontFamily="@font/inter_semibold"
-        android:paddingLeft="45dp"
-        android:text="Continuar con Google"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@+id/registrarse"
-        app:layout_constraintStart_toStartOf="@+id/registrarse"
-        app:layout_constraintTop_toBottomOf="@+id/barra" />
+        <Button
+            android:id="@+id/iniciarSesion"
+            android:layout_width="229dp"
+            android:layout_height="51dp"
+            android:layout_marginTop="100dp"
+            android:backgroundTint="#4446C7"
+            android:fontFamily="@font/inter_semibold"
+            android:onClick="irALogin"
+            android:text="Iniciar Sesión"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/acercaDe" />
 
-    <Button
-        android:id="@+id/registrarse"
-        android:layout_width="0dp"
-        android:layout_height="51dp"
-        android:layout_marginTop="24dp"
-        android:backgroundTint="#a5a6fa"
-        android:fontFamily="@font/inter_semibold"
-        android:text="Registrarse"
-        android:onClick="irARegistrarte"
-        android:textColor="#23295c"
-        android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@+id/iniciarSesion"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="@+id/iniciarSesion"
-        app:layout_constraintTop_toBottomOf="@+id/iniciarSesion" />
+        <Button
+            android:id="@+id/googleBoton"
+            android:layout_width="0dp"
+            android:layout_height="51dp"
+            android:layout_marginTop="32dp"
+            android:backgroundTint="@color/google_btn_color"
+            android:fontFamily="@font/inter_semibold"
+            android:paddingLeft="45dp"
+            android:text="Continuar con Google"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="@+id/registrarse"
+            app:layout_constraintStart_toStartOf="@+id/registrarse"
+            app:layout_constraintTop_toBottomOf="@+id/barra" />
 
-    <TextView
-        android:id="@+id/barra"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="______________________________________________________"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/registrarse" />
+        <Button
+            android:id="@+id/registrarse"
+            android:layout_width="0dp"
+            android:layout_height="51dp"
+            android:layout_marginTop="24dp"
+            android:backgroundTint="#a5a6fa"
+            android:fontFamily="@font/inter_semibold"
+            android:text="Registrarse"
+            android:onClick="irARegistrarte"
+            android:textColor="#23295c"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="@+id/iniciarSesion"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="@+id/iniciarSesion"
+            app:layout_constraintTop_toBottomOf="@+id/iniciarSesion" />
 
-    <ImageView
-        android:id="@+id/googleLogo"
-        android:layout_width="35dp"
-        android:layout_height="29dp"
-        app:layout_constraintBottom_toBottomOf="@+id/googleBoton"
-        app:layout_constraintEnd_toEndOf="@+id/googleBoton"
-        app:layout_constraintHorizontal_bias="0.067"
-        app:layout_constraintStart_toStartOf="@+id/googleBoton"
-        app:layout_constraintTop_toTopOf="@+id/googleBoton"
-        app:layout_constraintVertical_bias="0.513"
-        app:srcCompat="@drawable/googlelogo" />
+        <TextView
+            android:id="@+id/barra"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:text="______________________________________________________"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/registrarse" />
 
-    <ImageView
-        android:id="@+id/imageView7"
-        android:layout_width="319dp"
-        android:layout_height="275dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="24dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/holdy1" />
+        <ImageView
+            android:id="@+id/googleLogo"
+            android:layout_width="35dp"
+            android:layout_height="29dp"
+            app:layout_constraintBottom_toBottomOf="@+id/googleBoton"
+            app:layout_constraintEnd_toEndOf="@+id/googleBoton"
+            app:layout_constraintHorizontal_bias="0.067"
+            app:layout_constraintStart_toStartOf="@+id/googleBoton"
+            app:layout_constraintTop_toTopOf="@+id/googleBoton"
+            app:layout_constraintVertical_bias="0.513"
+            app:srcCompat="@drawable/googlelogo" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/imageView7"
+            android:layout_width="319dp"
+            android:layout_height="275dp"
+            android:layout_marginStart="48dp"
+            android:layout_marginTop="24dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/holdy1" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
