--- a/app/src/main/res/layout/perfil.xml
+++ b/app/src/main/res/layout/perfil.xml
@@ -248,6 +248,7 @@
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_marginStart="24dp"
+            android:onClick="irACamara"
             android:src="@drawable/camara_inicio"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
